--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -41,6 +41,16 @@
 {{- $pages := union .RegularPages .Sections }}
 
 {{- if .IsHome }}
+<script 
+    type="module" 
+    src="https://penmark.appsinprogress.com/dist/DraftsClient.js"
+    draftsFolder="drafts"
+    postsFolder="content/posts"
+    imagesFolder="static/images"
+    githubUsername="georgejdev"
+    githubRepoName="penmark-hugo-test"
+></script>
+
 {{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{- $pages = where $pages "Params.hiddenInHomeList" "!=" "true"  }}
 {{- end }}
