add penmark configuration

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -37,6 +37,7 @@
     imagesFolder="static/images"
     githubUsername="georgejdev"
     githubRepoName="penmark-hugo-test"  
+    console.log(postfilePath)
 ></script> 
   </header>
   {{- $isHidden := (.Param "cover.hiddenInSingle") | default (.Param "cover.hidden") | default false }}
