updated page path in hugo penmark #3

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,7 +32,7 @@
     <script 
     type="module" 
     src="https://penmark.appsinprogress.com/dist/PostClient.js" 
-    postfilepath="{{ $filePath }}"
+    postfilepath="{{ .Path}}"
     draftsFolder="drafts"
     postsFolder="content/posts"
     imagesFolder="static/images"
